# transcribe

./: .gitignore  README.md  pyproject.toml
src/transcribe/: __main__.py  cli.py  lib.py
