[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe"
description = "Transcribe recordings including speaker recognition (diarization) and timestamps"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "sueskind", email = "52210599+sueskind@users.noreply.github.com" }
]
urls = { source = "github.com/sueskind/transcribe" }
scripts = { transcribe = "transcribe.__main__:app" }
requires-python = ">=3.11"
dependencies = [
    "pyannote.audio~=3.1",
    "pydub~=0.25.1",
    "openai-whisper==20231117",
    "typer~=0.9.0",
    "rich~=13.7.0",
]

[tool.setuptools_scm]
write_to = "src/transcribe/_version.py"
